[tool.poetry]
name = "unitrunner"
version = "0.1.0"
description = ""
authors = ["xiaoxialulu <546464268@qq.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
anyio = "3.6.2"
APScheduler = "3.10.4"
asgiref = "3.7.2"
atomic_bomb_engine = "0.41.2"
billiard = "3.6.4.0"
celery = "5.2.7"
channels = "4.1.0"
daphne = "4.1.2"
Django = "5.0.4"
djangorestframework  = "3.15.1"
djangorestframework_simplejwt = "5.3.1"
django-filter = "24.1"
django-cors-headers = "3.11.0"
django-log-request-id = "2.1.0"
drf_yasg = "1.21.7"
Faker = "8.11.0"
fastapi = "0.111.0"
Jinja2 = "3.1.4"
jmespath = "1.0.1"
jsonpath = "0.82"
loguru = "0.6.0"
pydantic = "2.7.3"
pytest = "7.4.0"
python_dateutil = "2.8.2"
PyYAML = "6.0.1"
redis = "5.0.4"
redlock = "1.2.0"
Requests = "2.32.3"
mysqlclient = "2.2.4"
requests_toolbelt = "1.0.0"
rsa = "4.7.2"
simplejson = "3.17.0"
SQLAlchemy = "2.0.21"
urllib3 = "2.2.2"
uvicorn = "0.30.1"
websockets = "11.0.3"
numpy = "1.24.2"
django-redis = "5.2.0"
Pillow= "10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
